Remove references to mining, market-making, july 4th reward distribution

--- a/_content/en/index.html
+++ b/_content/en/index.html
@@ -75,4 +75,4 @@ redirect_from:
     </div>
   </div>
 </section>
-{% include intro-video.html %} {% include intro-doc.html %} {% include intro-rewards.html %} {% include intro-testimonials.html %} {% include intro-ex.html %} {% include intro-faq.html %} {% include intro-who.html %} {% include intro-press.html %}
+{% include intro-video.html %} {% include intro-doc.html %} {% include intro-testimonials.html %} {% include intro-ex.html %} {% include intro-faq.html %} {% include intro-who.html %} {% include intro-press.html %}
