--- a/_content/en/index.html
+++ b/_content/en/index.html
@@ -5,74 +5,122 @@ redirect_from:
   - /press/
 ---
 
-<section class="teaser img-responsive img-retina">
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+   <ol class="carousel-indicators">
+     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+     <li data-target="#myCarousel" data-slide-to="1"></li>
+     <li data-target="#myCarousel" data-slide-to="2"></li>
+   </ol>
+   <div class="carousel-inner" role="listbox">
+     <div class="carousel-item active">
+       <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+       <div class="container">
+         <div class="carousel-caption d-none d-md-block text-left">
+           <h1>Example headline.</h1>
+           <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+           <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+         </div>
+       </div>
+     </div>
+     <div class="carousel-item">
+       <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+       <div class="container">
+         <div class="carousel-caption d-none d-md-block">
+           <h1>Another example headline.</h1>
+           <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+           <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+         </div>
+       </div>
+     </div>
+     <div class="carousel-item">
+       <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+       <div class="container">
+         <div class="carousel-caption d-none d-md-block text-right">
+           <h1>One more for good measure.</h1>
+           <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+           <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+         </div>
+       </div>
+     </div>
+   </div>
+   <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+     <span class="sr-only">Previous</span>
+   </a>
+   <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+     <span class="carousel-control-next-icon" aria-hidden="true"></span>
+     <span class="sr-only">Next</span>
+   </a>
+ </div>
 
-  <div class="slogan animated fadeInDown mtl ptl">
-    <center>
-      <div id="getting-started">
-      </div>
 
-      <h2 class="pitch ">
-        <i>Steem</i> is a blockchain-based social media platform where <strong>anyone</strong> can earn <strong>rewards</strong>.
-      </h2>
-      <hr class="steemer">
-      <p class="pitch-sub">
-        <!--  Don't miss the Steem train!-->
-      </p>
-      <p>
+ <!-- Marketing messaging and featurettes
+ ================================================== -->
+ <!-- Wrap the rest of the page in another container to center all the content. -->
 
-        <div class="btn-group" role="group" aria-label="Links">
-          <a type="button" class="btn btn-primary" href="#intro-ex"><strong>Get STEEM</strong></a>
-          <a type="button" class="btn btn-primary" href="https://steemit.com" target="_blank"><strong>Explore STEEM</strong></a>
-        </div>
+ <div class="container marketing">
+
+   <!-- Three columns of text below the carousel -->
+   <div class="row">
+     <div class="col-lg-4">
+       <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+       <h2>Heading</h2>
+       <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+       <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+     </div><!-- /.col-lg-4 -->
+     <div class="col-lg-4">
+       <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+       <h2>Heading</h2>
+       <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+       <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+     </div><!-- /.col-lg-4 -->
+     <div class="col-lg-4">
+       <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+       <h2>Heading</h2>
+       <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+       <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+     </div><!-- /.col-lg-4 -->
+   </div><!-- /.row -->
 
 
-      </p>
+   <!-- START THE FEATURETTES -->
 
+   <hr class="featurette-divider">
 
+   <div class="row featurette">
+     <div class="col-md-7">
+       <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
+       <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+     </div>
+     <div class="col-md-5">
+       <img class="featurette-image img-fluid mx-auto" src="http://via.placeholder.com/500x500" alt="Generic placeholder image">
+     </div>
+   </div>
 
-    </center>
-  </div>
-  <div class="icon-scroll animated fadeInDown ">
-    <div class="mouse">
-      <div class="wheel"></div>
-    </div>
-    <div>
-      <span class="a1"></span>
-      <span class="a2"></span>
-      <span class="a3"></span>
-    </div>
-  </div>
+   <hr class="featurette-divider">
 
-</section>
-<!-- <img class="steem-grey img-responsive" src="../images/icons/steem-icon-grey.svg" /> -->
-<center>
-  <img style="margin-top: -9.5rem;" class="text-center align-center animated fadeInDown img-responsive img-retina pbl" src="../images/bg/steem-phone.svg" />
-</center>
-<section id="intro-involved vpc mtl">
-  <a name="join" />&nbsp;</a>
-  <div class="container">
-    <div class="row ">
-      <div class="col-xs-12 col-md-10 col-md-offset-1">
+   <div class="row featurette">
+     <div class="col-md-7 push-md-5">
+       <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
+       <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+     </div>
+     <div class="col-md-5 pull-md-7">
+       <img class="featurette-image img-fluid mx-auto" src="http://via.placeholder.com/500x500" alt="Generic placeholder image">
+     </div>
+   </div>
 
-        <h2 name="getinvolved" class="text-center">Join the movement</h2>
-        <hr class="steemer">
-        <ul class="features">
-          {% assign features = (site.features | where: 'lang', page.lang | sort: 'priority') %} {% for feature in features %}
-          <li class="col-xs-12 col-md-6 ">
-            <!--  <a href="{{ feature.url }}"> -->
+   <hr class="featurette-divider">
 
-            <img class="feature-img" src="{{ BASE_PATH }}/{{ feature.image }}" />
-            <br/>
+   <div class="row featurette">
+     <div class="col-md-7">
+       <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
+       <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+     </div>
+     <div class="col-md-5">
+       <img class="featurette-image img-fluid mx-auto" src="http://via.placeholder.com/500x500" alt="Generic placeholder image">
+     </div>
+   </div>
 
-            <b>{{ feature.title }}</b>
-            <br/>{{ feature.subtitle }}
-          </li>
-          {% endfor %}
-        </ul>
+   <hr class="featurette-divider">
 
-      </div>
-    </div>
-  </div>
-</section>
-{% include intro-video.html %} {% include intro-doc.html %} {% include intro-testimonials.html %} {% include intro-ex.html %} {% include intro-faq.html %} {% include intro-who.html %} {% include intro-press.html %}
+   <!-- /END THE FEATURETTES -->
